--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p>Pay via UPI:</p>
             <p>UPI ID: 9993069529@pz</p>
             <div class="qr-code">
-                <img src="qrcode.jpeg" alt="UPI QR Code">
+                <img src="qr.jpeg" alt="UPI QR Code">
             </div>
         </div>
     </div>
